# homework

./: .gitignore  CMakeLists.txt  README.md  socket.c  webbench.c
Manager/Adress_book/new/: CMakeLists.txt  README.md
Manager/Adress_book/new/include/: addressBook.hpp
Manager/Adress_book/new/src/: addressBook.cc
Manager/Adress_book/old/: CMakeLists.txt
Manager/Adress_book/old/include/: person.h
Manager/Adress_book/old/src/: main.cc  person.cc
Manager/Book-Store/: CMakeLists.txt  README.md
Manager/Shop/: CMakeLists.txt
Manager/Shop/include/: admin.h  view.hpp
Manager/Shop/old/include/: custom.h  goods.h
Manager/Shop/old/src/: admin.cc  custom.cc  main.cc
Manager/Shop/src/: goods.cc
Manager/Student/new/: CMakeLists.txt
Manager/Student/new/include/: Student.h  View.h  stuMager.h  student.h  view.h
Manager/Student/new/lib/: stuMager.cc  student.cc  view.cc
Manager/Student/new/src/: Student.cc  View.cc  main.cc
Manager/Student/old/include/: Student.hpp  utils.hpp
Manager/Student/old/src/: Student.cc
Manager/student_new/: CMakeLists.txt
Manager/student_new/src/: Student.cc  stuMager.cc
Manager/student_old/: README.md
reSize/: CMakeLists.txt
reSize/test/: file.txt
studentManager/: CMakeLists.txt
studentManager/include/: info.h
student_old/: CMakeLists.txt
student_old/include/: Student.hpp  utils.hpp
student_old/src/: Student.cc
